fix overflow issues on smaller screens

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -73,6 +73,8 @@ svg#iza-sdg {
         + div#sdg-info {
             opacity: 1;
             padding: 2em;
+            margin-top: 1em;
+            margin-bottom: 1em;
         }
     }
 }
@@ -196,6 +198,9 @@ div#sdg-info {
         //box-shadow: 0 1px 6px 0px rgba(0, 0, 0, 0.3);
         box-shadow: 0 1px 12px -3px rgba(0, 0, 0, 0.55);
         transition: box-shadow 600ms ease-in 400ms;
+        &:before {
+            opacity: 1;
+        }
     }
 
     > div {
@@ -213,7 +218,7 @@ div#sdg-info {
         }
 
         &.visible {
-            max-height: 100vh;
+            max-height: 1000px;
             opacity: 1;
             overflow: visible;
             transition: max-height 600ms ease-in-out 600ms, opacity 300ms ease-in-out 800ms;
@@ -281,7 +286,7 @@ div#sdg-info {
     }
 
     .button {
-        margin-top: 0.3em;
+        margin-top: 0.6em;
     }
 }
 
